# daigou_detection

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  TECHNICAL_DESIGN.md  WALKTHROUGH.md  plan.md  pyproject.toml
app/: dashboard.py
calibration/: history.md
rules/: probuyer_rules.json
scripts/: 01_download_data.py  02_prepare_data.py  03_train_model.py  04_generate_rules.py  05_generate_case_studies.py  06_run_all.py  07_calibrate_model.py
src/probuyer_xai/: __init__.py  calibrate.py  config.py  data.py  explain.py  features.py  llm.py  model.py  pipeline.py  reporting.py  rules.py  whatif.py
tests/: test_calibrate.py  test_data.py  test_explain.py  test_features.py  test_rules.py  test_whatif.py
