[project]
name = "probuyer-xai"
version = "0.1.0"
description = "Retail probuyer-risk detection with HBOS anomaly detection and LLM explainability"
requires-python = "==3.11.*"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pyod>=2.0",
    "plotly>=5.22",
    "streamlit>=1.35",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "joblib>=1.4",
    "openpyxl>=3.1",
    "requests>=2.32",
]


[dependency-groups]
dev = ["pytest>=8.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/probuyer_xai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
